--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -20,7 +20,20 @@
 
 }
 
-
+.login-button-container{
+    text-align: center;
+    margin: 0;
+    position: fixed;
+    top: 10%;
+    left: 35%;
+}
+.sign-up-container{
+    text-align: center;
+    margin: 0;
+    position: fixed;
+    top: 10%;
+    left: 55%;
+}
 .login-button {
     font-size: 16px;
     font-weight: 700;
@@ -75,7 +88,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    text-fill-color: transparent;
+    /* text-fill-color: transparent; */
     display: block;
   }
 
@@ -91,7 +104,7 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
-    text-fill-color: transparent;
+    /* text-fill-color: transparent; */
     display: block;
   }
   
@@ -107,6 +120,10 @@
 
 
   .hidden{
+    display: none;
+}
+
+.reg-hidden{
     display: none;
 }
 .form {
@@ -179,6 +196,10 @@
   .signup-link a {
     text-decoration: underline;
   }
+
+
+
+
 
 
 
